syntax="proto3";

option go_package = "./;publicgroup";

package publicgroup;

import "google/protobuf/timestamp.proto";

service PublicGroup {
    rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {}
    rpc SearchByName(SearchByNameRequest) returns (SearchByNameResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc GetSubscriptionByPublicGroupIDAndSubscriberID(GetSubscriptionByPublicGroupIDAndSubscriberIDRequest) returns (GetSubscriptionByPublicGroupIDAndSubscriberIDResponse) {}
    rpc GetBySubscriberID(GetBySubscriberIDRequest) returns (GetBySubscriberIDResponse) {}
    rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}
    rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse) {}
    rpc Upload(stream UploadRequest) returns (UploadResponse) {}
    rpc GetSubscriptionIDs(GetSubscriptionIDsRequest) returns (GetSubscriptionIDsResponse) {}
}

message PublicGroupResponse {
    uint64 id = 1;
    string name = 2;
    string description = 3;
    string avatar = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    uint64 subscribers_count = 7;
}

message PublicGroupWithInfoResponse {
    PublicGroupResponse public_group = 1;
    bool is_subscribed = 2;
}

message SubscriptionResponse {
    uint64 id = 1;
    uint64 public_group_id = 2;
    uint64 subscriber_id = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message GetByIDRequest {
    uint64 id = 1;
    uint64 user_id = 2;
}

message GetByIDResponse {
    PublicGroupWithInfoResponse public_group = 1;
}

message SearchByNameRequest {
    string query = 1;
    uint64 user_id = 2;
}

message SearchByNameResponse {
    repeated PublicGroupWithInfoResponse public_groups = 1;
}

message CreateRequest {
    string name = 1;
    string description = 2;
    string avatar = 3;
}

message CreateResponse {
    PublicGroupResponse public_group = 1;
}

message UpdateRequest {
    uint64 id = 1;
    string name = 2;
    string description = 3;
    string avatar = 4;
}

message UpdateResponse {
    PublicGroupResponse public_group = 1;
}

message DeleteRequest {
    uint64 id = 1;
}

message DeleteResponse {}

message GetSubscriptionByPublicGroupIDAndSubscriberIDRequest {
    uint64 public_group_id = 1;
    uint64 subscriber_id = 2;
}

message GetSubscriptionByPublicGroupIDAndSubscriberIDResponse {
    SubscriptionResponse subscription = 1;
}

message GetBySubscriberIDRequest {
    uint64 subscriber_id = 1;
}

message GetBySubscriberIDResponse {
    repeated PublicGroupResponse public_groups = 1;
}

message SubscribeRequest {
    uint64 public_group_id = 1;
    uint64 subscriber_id = 2;
}

message SubscribeResponse {
    SubscriptionResponse subscription = 1;
}

message UnsubscribeRequest {
    uint64 public_group_id = 1;
    uint64 subscriber_id = 2;
}

message UnsubscribeResponse {}

message UploadRequest {
    string file_name = 1;
    bytes chunk = 2;
    string contentType = 3;
}

message UploadResponse {
    string file_name = 1;
    uint64 size = 2;
}

message GetSubscriptionIDsRequest {
    uint64 user_id = 1;
}

message GetSubscriptionIDsResponse {
    repeated uint64 public_group_ids = 1;
}
